// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Motion> renders 1`] = `
<View
  style={Object {}}
/>
`;

exports[`<Motion> when {children} 1`] = `
<View
  style={Object {}}
>
  <View />
</View>
`;

exports[`<Motion> when {delay} 1`] = `
<View
  style={
    Object {
      "left": 128,
      "opacity": 0.75,
      "transform": Array [
        Object {
          "scale": 0.5,
        },
      ],
    }
  }
/>
`;

exports[`<Motion> when {disabled} 1`] = `
<View
  style={
    Array [
      undefined,
      false,
    ]
  }
/>
`;

exports[`<Motion> when {duration} 1`] = `
<View
  style={
    Object {
      "left": 128,
      "opacity": 0.75,
      "transform": Array [
        Object {
          "scale": 0.5,
        },
      ],
    }
  }
/>
`;

exports[`<Motion> when {style} 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#4066EA",
      "left": 128,
      "opacity": 0.75,
      "padding": 32,
      "transform": Array [
        Object {
          "scale": 0.5,
        },
      ],
    }
  }
/>
`;

exports[`<Motion> when {timeline} 1`] = `
<View
  style={
    Object {
      "left": undefined,
      "opacity": undefined,
      "transform": Array [
        Object {
          "scale": undefined,
        },
      ],
    }
  }
/>
`;

exports[`<Motion> when {type} 1`] = `
<View
  style={
    Object {
      "left": undefined,
      "opacity": undefined,
      "transform": Array [
        Object {
          "scale": undefined,
        },
      ],
    }
  }
/>
`;

exports[`<Motion> when {useNativeDriver} 1`] = `
<View
  style={
    Object {
      "left": undefined,
      "opacity": undefined,
      "transform": Array [
        Object {
          "scale": undefined,
        },
      ],
    }
  }
/>
`;
